<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:elevation="10sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar_following"
            android:layout_width="75dp"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/holo_red_dark"
            android:layout_height="75dp"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/tv_fullname_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:layout_marginTop="10sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/iv_avatar_following"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_id_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textColor="@color/white"
            android:layout_toEndOf="@+id/iv_avatar_following"
            android:layout_below="@+id/tv_fullname_following"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/urlTv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:maxLines="1"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tv_id_following"
            android:layout_toEndOf="@id/iv_avatar_following"/>


    </RelativeLayout>


</androidx.cardview.widget.CardView>